# offtree-o-llvm

./: Dockerfile  README.md  anagram.bc  obfuscate.sh
passes/: CMakeLists.txt
passes/cif/: CMakeLists.txt  CloneInlineFunctionPass.cpp
passes/dif/: CMakeLists.txt  DeleteInlineFunctionPass.cpp
passes/obfs/: BogusControlFlow.cpp  CMakeLists.txt  Flattening.cpp  Flattening.h  PassManagerBuilder.cpp  Split.h  SplitBasicBlocks.cpp  Substitution.cpp  Substitution.h  Utils.cpp
passes/prep/: CMakeLists.txt  PreparationPass.cpp
